# HackPrinceton25

./: .gitignore  API_REFERENCE.md  DEPLOYMENT.md  LICENSE  README.md  SETUP_GUIDE.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  LLM_INTEGRATION_GUIDE.md  README.md  api_wrapper.py  app.py  composio.ts  config.env  config.py  forecast_report.json  main_compo.py  models.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  setup.sh  start.sh  test_api  test_llm_integration.py  tsconfig.json
backend/insight-forecast/: environmental.py  impact_radius.py
backend/insight_forecast/: __init__.py  api_wrapper.py  environmental.py  forecast_integration.py
backend/services/: REFERENCES.md  __init__.py  power_simulation.py  simulate.py
backend/services/tools/: models.py  test_cooling.py  test_grid.py
backend/src/: server.ts
backend/src/routes/: ai.ts  notifications.ts  sse.ts  teams.ts
backend/test suites/: test_backend.py  test_integration.py  test_population.py
frontend/: .dockerignore  .env.example  Dockerfile  README.md  docker-entrypoint.sh  forecast.html  index.html  landing.html  nginx.conf  package-lock.json  package.json  styles.css  tailwind.config.js  vite.config.js
frontend/js/: api.js  app.js  config.js  forecast.js  map.js  state.js  ui.js
frontend/src/: App.jsx  index.css
skills/: DOCS_INDEX.md  DOCUMENTATION_SUMMARY.md  FRONTEND_GETTING_STARTED.md  HANDOFF_TO_FRONTEND.md  README.md  SIMULATION_OUTPUT_GUIDE.md  SIMULATION_QUICK_REF.md  SUMMARY_FOR_FRONTEND_DEV.md  VISUALIZATION_MOCKUP.md
(+26 files in other folders)
