[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Pablo Leyva <pleyva2004@gmial.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
numpy = ">=2.3.4,<3.0.0"
scipy = ">=1.16.3,<2.0.0"
matplotlib = ">=3.10.7,<4.0.0"
flask = ">=3.1.2,<4.0.0"
flask-cors = ">=6.0.1,<7.0.0"
python-dotenv = ">=1.0.0,<2.0.0"
anthropic = ">=0.40.0,<1.0.0"
requests = ">=2.32.0,<3.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
